--- a/index.html
+++ b/index.html
@@ -334,6 +334,32 @@
             </div>
           </section>
 
+          {/* Stats Section */}
+          <section id="stats" className="py-24 bg-black border-y border-zinc-900/50 relative z-20">
+            <div className="px-6 md:px-12 max-w-7xl mx-auto">
+              <div className="grid grid-cols-1 md:grid-cols-3 gap-12 text-center">
+                <RevealOnScroll delay={0}>
+                  <div className="space-y-2">
+                    <h3 className="text-6xl md:text-7xl font-gaming font-black italic uppercase text-[#FDB600] accent-glow">3M+</h3>
+                    <p className="text-zinc-500 text-lg font-medium">Visits</p>
+                  </div>
+                </RevealOnScroll>
+                <RevealOnScroll delay={150}>
+                  <div className="space-y-2">
+                    <h3 className="text-6xl md:text-7xl font-gaming font-black italic uppercase text-[#FDB600] accent-glow">70K+</h3>
+                    <p className="text-zinc-500 text-lg font-medium">Favorites</p>
+                  </div>
+                </RevealOnScroll>
+                <RevealOnScroll delay={300}>
+                  <div className="space-y-2">
+                    <h3 className="text-6xl md:text-7xl font-gaming font-black italic uppercase text-[#FDB600] accent-glow">200K+</h3>
+                    <p className="text-zinc-500 text-lg font-medium">Group Members</p>
+                  </div>
+                </RevealOnScroll>
+              </div>
+            </div>
+          </section>
+
           <section id="social" className="py-20 px-6 flex justify-center items-center relative z-20">
             <div className="w-full max-w-6xl bg-[#080808]/80 backdrop-blur-md border border-zinc-900 rounded-[3rem] p-8 md:p-14 relative overflow-hidden shadow-2xl text-center">
               <div className="relative z-10">
